package com.piedrazul.Domain.core.events;

/**
 * Enumeration of possible clinic event types.
 */
public enum ClinicEventType {
  USER_CHANGE,
  STATUS_MESSAGE
  // CREATED,
  // UPDATED,
  // DELETED,
  // ERROR
}
