package com.piedrazul.Domain.enums;

public enum Profession {
  MEDIC,
  THERAPIST
}
