package com.piedrazul.Domain.enums;

public enum Specialty {
  NEURAL,
  CHIROPRACTIC,
  PHYSIO
}