@startuml DomainClasses

!include https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/C4_Deployment.puml

abstract User <<abstract>> #Pink;line:Black;line.dotted;text:gray {
  <<Own>> #id: long 
  <<Own>> #username: String
  <<Own>> #fullname: String
  <<Own>> #password: String
  <<Own>> #role: Role
  <<Own>> #state: State
}

class Patient <<entity>> #LightYellow;line:Black;text:Black extends User {
  <<Own>> -citizenshipCard: long
  <<Own>> -phoneNumber: String
} 

abstract ClinicalStaff <<abstract>> #Pink;line:Black;line.dotted;text:gray extends User {
  <<Own>> #profession: Profession
  <<Own>> #specialty: Specialty
}

class Medic <<entity>> #LightYellow;line:Black;text:Black extends ClinicalStaff {}

class Therapist <<entity>> #LightYellow;line:Black;text:Black extends ClinicalStaff {}

class AppointmentManager <<entity>> #LightYellow;line:Black;text:Black extends User {}

class Administrator <<entity>> #LightYellow;line:Black;text:Black extends User {}

class Appointment <<entity>> #LightYellow;line:Black;text:Black {
  -id: long
  -citizenshipCardPatient: long
  -phoneNumberPatient: String
  -medicalStaffId: long
  -dateAndTime: Date 
  -attentionType: AttentionType
}

enum Role <<enumeration>> #LightBlue;line:Black;text:Black {
  Administrator
  Patient
  ClinicalStaff
  AppointmentManager
}

enum Profession <<enumeration>> #LightBlue;line:Black;text:Black {
  Medic
  Therapist 
}

enum Specialty <<enumeration>> #LightBlue;line:Black;text:Black {
  NeuralTherapy
  Chiropractic
  Physiotherapy
}

enum State <<enumeration>> #LightBlue;line:Black;text:Black {
  Activate
  Inactivate
}

enum AttentionType <<enumeration>> #LightBlue;line:Black;text:Black {
  General
  Specialized
}

class ClinicEvent <<observer pattern>> #PaleGreen;line:Black;text:Black {

}

class ClinicEventBus <<observer pattern>> #PaleGreen;line:Black;text:Black {

}

interface IClinicObserver <<interface>> #aliceblue;line:blue;text:blue {

}

enum ClinicEventType <<enumeration>> #LightBlue;line:Black;text:Black {
  AppointmentChanged
  StatusMessage
}

User ..> Role
User ..> State 

ClinicalStaff ..> Profession
ClinicalStaff ..> Specialty

Appointment ..> AttentionType

ClinicEvent -> ClinicEventType
ClinicEventBus "1..1" o-- "0..*" IClinicObserver : has

@enduml